[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/spell/manager/spell_manager.gd" type="Script" id=1]

[node name="SpellManager" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="on_spawn_timer_timeout"]
